**************
RECENT CHANGES
**************

======
1.86.0
======

* #287 db:console closes connection on AWS
* #290 Add force use database option for when installing with --noDownload (by Aydin Hassan)
* #295 Fixed typo in config.yaml  (by Andrea De Pirro)
* #296 loadXML must be called AFTER preserveWhiteSpace (by Volker Thiel)
* #297 [Insight] Missing use statement should be avoided

======
1.85.0
======

* #18 New --format parameter to print data of tables in CSV, XML or JSON (for table helper based commands)
* #270 script:repo:run and error handling (by Cyrill Schumacher)
* #273 Allow directory as argument for db:dump (by Rick Kuipers)
* #274 Running Setup Resource Scripts Incrementally (by Alan Storm)
* #278 After magerun install I always see the Magento Installation Wizard
* #279 Updated documentation to include a few undocumented parameters to config:get (by Tegan Snyder)
* #282 Global variable or function should never be used
* #284 Magento folder could not be detected - When using --noDownload
* #285 Uninstall force bug (by Aydin Hassan)
* #289 Add Database port option (by Aydin Hassan)

-----------------------------------------
SEE FULL CHANGELOG: http://bit.ly/10IDU1H
-----------------------------------------

Visit our new blog http://magerun.net