@@ -6,6 +6,7 @@ RECENT CHANGES
 1.86.0
 ======
 
+* New db:maintain:check-tables command
 * #287 db:console closes connection on AWS
 * #290 Add force use database option for when installing with --noDownload (by Aydin Hassan)
 * #295 Fixed typo in config.yaml  (by Andrea De Pirro)
